--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "travis-benchmark",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Generate json results for benchmark.js",
   "license": "MIT",
   "scripts": {
@@ -17,6 +17,6 @@
     "platform": "^1.3.5",
     "simple-git": "^1.95.1",
     "tmp": "0.0.33",
-    "travis-json-git-log": "0.0.3"
+    "travis-json-git-log": "^0.0.4"
   }
 }
